# sparktrap

./: .bandit.yaml  .gitignore  .pre-commit-config.yaml  .pylintrc  Contributing.md  Dockerfile  README.md  pyproject.toml  requirements.txt
capture-engine/: .markdownlint.yaml  Cargo.toml  Dockerfile  Makefile  README.md  cargo-deny.toml  docker-compose.yml  output.txt
capture-engine/src/: capture_engine.rs  lib.rs  main.rs  mod.rs  new_t.rs  t.rs  traits.rs
capture-engine/src/capture/: buffer_manager.rs  capture_config.rs  capture_engine.rs  capture_error.rs  capture_session.rs  capture_statistics.rs  health_monitor.rs  interface_manager.rs  mod.rs  packet_filter.rs  packet_processor.rs  protocol_filter.rs  state_machine.rs  state_recovery.rs  state_sync.rs  state_validator.rs  transaction.rs
capture-engine/src/capture_engine/: capture.rs
capture-engine/src/capture_engine/buffer/: traits.rs
capture-engine/src/capture_engine/capture/: buffer_manager.rs  capture_config.rs  capture_engine.rs  capture_session.rs  capture_statistics.rs  error_messages.rs  health_monitor.rs  interface_manager.rs  packet_filter.rs  packet_processor.rs  protocol_filter.rs  state_machine.rs  state_recovery.rs  state_sync.rs  state_validator.rs  traits.rs  transaction.rs
capture-engine/src/capture_engine/cloud/: traits.rs
capture-engine/src/capture_engine/config/: traits.rs
capture-engine/src/capture_engine/control/: traits.rs
capture-engine/tests/common/: mock_interface.rs  mod.rs  test_constants.rs  test_context.rs  test_features.rs  test_packet.rs
control-plane/: .bandit.yaml  (+1 more)
(+44 files in other folders)
