# pyproject.toml

[tool.black]
line-length = 120
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | deploy
  | examples
  | infrastructure
  | notes
)/
'''

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
force_single_line = false
include_trailing_comma = true
combine_as_imports = true
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
known_first_party = "sparktrap"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"