[package]
name = "capture-engine"
version = "0.1.0"
license = "MIT"
authors = ["Brad Edwards"]
edition = "2021"

[features]
default = []
state_management = []
advanced_state_management = ["state_management"]

[dependencies]
async-trait = "0.1.83"
criterion = "0.5.1"
network-interface = "2.0.0"
parking_lot = "0.12.3"
proptest = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }